--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"@codemirror/language": "^6.8.0"
+		"@codemirror/language": "git://github.com/lishid/cm-language.git#main"
 	}
 }
